--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.11",
+    "@mui/material": "^7.0.2",
+    "framer-motion": "^12.7.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^19.0.0",
+    "react-piano": "^3.1.3",
+    "react-router-dom": "^7.5.1",
+    "react-spotify-embed": "^2.0.4",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
