--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.1",
     "react-spotify-embed": "^2.0.4",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "^2.21.0",
+    "zdog": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
