--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.1",
     "react-spotify-embed": "^2.0.4",
+    "react-vertical-timeline-component": "^3.5.3",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
